removendo arquivos privados

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,11 @@
-version: 'X'
+version: '3'
 services:
-  app_A:
+  frontend:
+    build: ./docker/
+    # parâmetros
+    # ...
+  back-end:
     # ...
     # parâmetros
     # ...
-  app_B:
-    # ...
-    # parâmetros
-    # ...
-  # ...
+  testes:
